--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,19 +1,19 @@
 <mat-toolbar class="navbar" color="primary">
-
-    <img src="assets/img/logofinal1.png" alt="logoverduleria" class="logo_verdu" width="682" height="260">
-
+    <a href="#">
+        <img src="assets/img/logofinal1.png" alt="logoverduleria" class="logo_verdu" width="682" height="260">
+    </a>
 <div class="spacer"></div>
 
 <nav class="navbar1">
-    <a mat-stroked-button routerLink="inicio">Inicio</a>
-    <a mat-stroked-button routerLink="frutas">Frutas</a>
-    <a mat-stroked-button routerLink="verduras">Verduras</a>
-    <a mat-stroked-button routerLink="contacto">Contacto</a>
+    <a class="options" mat-stroked-button routerLink="inicio">Tienda</a>
+    <a class="options" mat-stroked-button routerLink="frutas">Frutas</a>
+    <a class="options" mat-stroked-button routerLink="verduras">Verduras</a>
+    <a class="options" mat-stroked-button routerLink="contacto">Contacto</a>
 </nav>
 
 <nav class="navbar2">
-    <a mat-stroked-button routerLink="carrito">Carrito</a>
-    <a mat-raised-button color="primary">Ingresar</a>
+    <a class="options" mat-stroked-button routerLink="carrito">Carrito</a>
+    <a class="ingresar" mat-raised-button color="primary">Ingresar</a>
 </nav>
 
 </mat-toolbar>
